--- a/_config.yml
+++ b/_config.yml
@@ -51,10 +51,7 @@ orcid_id: # your ORCID ID
 medium_username: # your Medium username
 quora_username: # your Quora username
 publons_id: # your ID on Publons
-lattes_id: # your ID on Lattes (Brazilian Lattes CV)
-osf_id: # your OSF ID
-research_gate_profile: # your profile on ResearchGate
-scopus_id: # your profile on Scopus
+research_gate_profile: Weijie_Liu6
 blogger_url: # your blogger URL
 work_url: # work page URL
 keybase_username: # your keybase user name
