--- a/_config.yml
+++ b/_config.yml
@@ -42,7 +42,7 @@ orcid_id: # your ORCID ID
 medium_username: # your Medium username
 quora_username: # your Quora username
 publons_id: # your ID on Publons
-research_gate_profile: # your profile on ResearchGate
+research_gate_profile: Weijie_Liu6
 blogger_url: # your blogger URL
 
 contact_note: >
