--- a/_config.yml
+++ b/_config.yml
@@ -43,7 +43,7 @@ medium_username: # your Medium username
 quora_username: # your Quora username
 publons_id: # your ID on Publons
 research_gate_profile: Weijie_Liu6
-blogger_url: # your blogger URL
+blogger_url: drstanliu.cn
 
 contact_note: >
   My permanent email – liuweijie at whu period edu period cn
