--- a/_config.yml
+++ b/_config.yml
@@ -37,8 +37,8 @@ og_image: # The site-wide (default for all links) Open Graph preview image
 # -----------------------------------------------------------------------------
 
 github_username: StanPlatinum
-scholar_userid: # your Google Scholar ID
-orcid_id: # your ORCID ID
+scholar_userid: gGQftcIAAAAJ&hl=en
+orcid_id: 0000-0002-3054-766X
 medium_username: # your Medium username
 quora_username: # your Quora username
 publons_id: # your ID on Publons
@@ -46,8 +46,8 @@ research_gate_profile: Weijie_Liu6
 blogger_url: #
 
 contact_note: >
-  My permanent email – liuweijie at whu period edu period cn
-
+    You are welcome to send me email to me, but do not be discouraged if I do not respond;
+    I might just be putting off by current tight schedule.
 # -----------------------------------------------------------------------------
 # Blog
 # -----------------------------------------------------------------------------
