--- a/_config.yml
+++ b/_config.yml
@@ -213,6 +213,7 @@ display_categories: ['blockquotes'] # these categories will be displayed on the 
 scholar:
 
   last_name: Liu
+  first_name: Weijie
 
   style: apa
   locale: en
