--- a/_config.yml
+++ b/_config.yml
@@ -212,8 +212,8 @@ display_categories: ['blockquotes'] # these categories will be displayed on the 
 
 scholar:
 
-  last_name: Liu
-  first_name: Weijie
+  last_name: # Liu
+  # first_name: Weijie
 
   style: apa
   locale: en
