--- a/_config.yml
+++ b/_config.yml
@@ -2,8 +2,9 @@
 # Site settings
 # -----------------------------------------------------------------------------
 
-title: Liu Weijie
-email: weijliu@iu.edu
+title: The World
+email: 
+# email: weijliu@iu.edu
 description: > # this means to ignore newlines until "url:"
   A simple, whitespace theme for academics. Based on [*folio](https://github.com/bogoli/-folio) design.
 footer_text: >
