--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 # -----------------------------------------------------------------------------
 
 title: The World
-email: yangzhi.lwj@antgroup.com
+email: weijieliu@nankai.edu.cn
 description: > # this means to ignore newlines until "url:"
   A simple, whitespace theme for academics. Based on [*folio](https://github.com/bogoli/-folio) design.
 footer_text: >
@@ -184,8 +184,8 @@ display_categories: ['blockquotes'] # these categories will be displayed on the 
 
 scholar:
 
-  last_name: # Liu
-  # first_name: Weijie
+  last_name: Liu
+  first_name: Weijie
 
   style: apa
   locale: en
