--- a/_config.yml
+++ b/_config.yml
@@ -53,7 +53,7 @@ research_gate_profile: Weijie_Liu6
 blogger_url: #
 
 contact_note: >
-  You are welcome to send me email to me, but do not be discouraged if I do not respond;
+  You are welcome to send me email, but do not be discouraged if I do not respond;
   I might just be putting off by a tight schedule.
 # -----------------------------------------------------------------------------
 # Blog
